--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.4.9",
     "classnames": "^2.2.6",
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
