--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "dev": "gulp dev",
     "wp": "webpack --watch",
-    "start": "nodemon server/server.js --exec babel-node --ignore react",
+    "start": "nodemon server/server.js",
     "test": "nodemon test.js",
     "heroku-postbuild": "webpack -p"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-throw-expressions": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.4.3",
@@ -36,9 +38,6 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/node": "^7.2.2",
     "@amcharts/amcharts4": "^4.4.9",
     "classnames": "^2.2.6",
     "dotenv": "^6.2.0",
