--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "wp": "webpack --watch",
     "start": "nodemon server/server.js",
     "test": "nodemon test.js",
-    "heroku-postbuild": "webpack -p"
+    "heroku-postbuild": "webpack -p --config ./webpack.prod.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -35,7 +35,7 @@
     "stylus-loader": "^3.0.2",
     "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2",
-    "webpack-merge": "^4.1.4"
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "@amcharts/amcharts4": "^4.4.9",
