--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ NODE_ENV = development
 PORT = 6969
 HOST = localhost
 APP_URI = http://localhost:6969
+APP_API_URL = http://localhost:6969/api
 HTML_DIR = public/index.html
 UPLOAD_DIR = uploads
 STATIC_DIR = public
