--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ejs": "^2.6.1",
     "env-cmd": "^8.0.2",
     "express": "^4.15.2",
+    "fs-extra": "^8.0.1",
     "history": "^4.7.2",
     "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.4.0",
