--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "wp": "webpack --watch",
     "start": "node server/server.js",
     "test": "nodemon test.js",
-    "heroku-postbuild": "webpack -p --config ./webpack.prod.config.js"
+    "heroku-postbuild": "webpack -p --config ./webpack.prod.config.js",
+    "assets": "node ./scripts/package-assets"
   },
   "author": "",
   "license": "ISC",
