--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "gulp dev",
     "wp": "webpack --watch",
-    "start": "cmd-env prod.env node server/server.js",
+    "start": "./node_modules/.bin/env-cmd prod.env node server/server.js",
     "test": "nodemon test.js",
     "heroku-postbuild": "webpack -p --config ./webpack.prod.config.js",
     "assets": "node ./scripts/package-assets"
