--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@amcharts/amcharts4": "^4.4.9",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "classnames": "^2.2.6",
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
@@ -65,6 +66,7 @@
     "sequelize": "^5.8.6",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
+    "source-map-loader": "^0.2.4",
     "uniquid": "^1.1.4",
     "yup": "^0.26.10"
   }
