--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ejs": "^2.6.1",
     "env-cmd": "^8.0.2",
     "express": "^4.15.2",
+    "file-loader": "^3.0.1",
     "fs-extra": "^8.0.1",
     "history": "^4.7.2",
     "js-cookie": "^2.2.0",
