--- a/package.json
+++ b/package.json
@@ -14,6 +14,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "gulp": "4.0.1",
+    "gulp-inject": "^4.3.2",
+    "gulp-nodemon": "^2.4.2",
+    "gulp-sort": "^2.0.0",
+    "gulp-stylus": "^2.7.0",
+    "install": "^0.12.2",
+    "npm": "^6.9.0"
+  },
+  "dependencies": {
+    "style-loader": "^0.21.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-merge": "^4.2.1",
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
     "@babel/node": "^7.2.2",
@@ -24,21 +39,6 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^0.28.11",
-    "gulp": "4.0.1",
-    "gulp-inject": "^4.3.2",
-    "gulp-nodemon": "^2.4.2",
-    "gulp-sort": "^2.0.0",
-    "gulp-stylus": "^2.7.0",
-    "install": "^0.12.2",
-    "npm": "^6.9.0",
-    "style-loader": "^0.21.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-merge": "^4.2.1"
-  },
-  "dependencies": {
     "@amcharts/amcharts4": "^4.4.9",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "classnames": "^2.2.6",
