--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "style-loader": "^0.21.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "webpack": "^4.32.2",
+    "@amcharts/amcharts4": "^4.0.0-beta.64",
+    "webpack": "^4.6.0",
     "webpack-cli": "^3.1.2",
     "webpack-merge": "^4.2.1",
     "@babel/cli": "^7.4.3",
@@ -39,7 +40,6 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^0.28.11",
-    "@amcharts/amcharts4": "^4.4.9",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "classnames": "^2.2.6",
     "dotenv": "^6.2.0",
