--- a/package.json
+++ b/package.json
@@ -23,25 +23,20 @@
     "npm": "^6.9.0"
   },
   "dependencies": {
-    "style-loader": "^0.21.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "@amcharts/amcharts4": "^4.0.0-beta.64",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-merge": "^4.2.1",
+    "@amcharts/amcharts4": "^4.4.10",
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
     "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
+    "acorn": "^6.1.1",
     "babel-loader": "^8.0.5",
-    "css-loader": "^0.28.11",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "classnames": "^2.2.6",
+    "css-loader": "^0.28.11",
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "env-cmd": "^8.0.2",
@@ -68,7 +63,13 @@
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.21.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "uniquid": "^1.1.4",
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.1.2",
+    "webpack-merge": "^4.2.1",
     "yup": "^0.26.10"
   }
 }
