--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "wp": "webpack --watch",
     "start": "./node_modules/.bin/env-cmd ./prod.env node server/server.js",
     "test": "nodemon test.js",
-    "heroku-postbuild": "webpack -p --config ./webpack.prod.config.js",
+    "heroku-postbuild": "webpack --config ./webpack.prod.config.js",
     "assets": "node ./scripts/package-assets"
   },
   "author": "",
