--- a/prod.env
+++ b/prod.env
@@ -1,6 +1,6 @@
 NODE_ENV = production
-APP_URI = https://iot-suck.herokuapp.com
-APP_API_URL = https://iot-suck.herokuapp.com/api
+APP_URI = https://iot-web123.herokuapp.com
+APP_API_URL = https://iot-web123.herokuapp.com/api
 HTML_DIR = dist/index.html
 UPLOAD_DIR = uploads
 STATIC_DIR = dist
